--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/postgres-emitter": "^0.1.0",
     "express": "^4.17.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
