--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/postgres-emitter": "^0.1.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.16",
     "sequelize-cli": "^6.4.1"
   }
 }
