--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "server": "nodemon index.js ",
+    "server": "nodemon app.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,9 @@
   "dependencies": {
     "@socket.io/postgres-emitter": "^0.1.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
