--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
