--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.17.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
