--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
+    "sharp": "^0.31.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
