--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@socket.io/postgres-emitter": "^0.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
