--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js ",
+    "dev": "nodemon index.js ",
+    "prettier": "npx prettier --write .",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,14 +25,16 @@
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1",
     "sharp": "^0.31.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.16",
-    "sequelize-cli": "^6.4.1"
+    "prettier": "2.8.1"
   }
 }
