--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,12 +1,14 @@
-name: Deploy
+name: Fly Deploy
 
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: 
+     - main
 
 env:
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  FLY_API_TOKEN: 5beALIvN4q6qereFWhq1Q0OTBoZnX7453juvLOjcuio
+
 jobs:
   deploy:
     name: Deploy app
