--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -7,7 +7,7 @@ on:
      - main
 
 env:
-  FLY_API_TOKEN: 5beALIvN4q6qereFWhq1Q0OTBoZnX7453juvLOjcuio
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
   deploy:
